<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/rounded_corners">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_available"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingBottom="8dp"/>

    <TextView
        android:id="@+id/dialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_dialog_message"
        android:textSize="16sp"
        android:paddingBottom="8dp"/>

    <!-- Горизонтальная полоса загрузки -->
    <ProgressBar
        android:id="@+id/downloadProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:visibility="gone"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/buttonDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textColor="?android:attr/textColorPrimary"/>
    </LinearLayout>
</LinearLayout>
