
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@drawable/color_round"
    android:layout_marginBottom="10dp">

    <!-- Дата -->
    <LinearLayout
        android:id="@+id/dateLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/dateTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@android:color/darker_gray"
            android:textSize="10sp"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="13sp"
             />
    </LinearLayout>

    <!-- Иконка состояния -->
    <ImageView
        android:id="@+id/conditionIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toEndOf="@id/dateLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- Максимальная температура -->
    <LinearLayout
        android:id="@+id/maxTempLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/conditionIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/maxTempLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max"
            android:textColor="@android:color/darker_gray"
            android:textSize="10sp"
            android:gravity="end"/>

        <TextView
            android:id="@+id/maxTempText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- Минимальная температура -->
    <LinearLayout
        android:id="@+id/minTempLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/maxTempLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/minTempLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min"
            android:textColor="@android:color/darker_gray"
            android:textSize="10sp"
            android:gravity="end"/>

        <TextView
            android:id="@+id/minTempText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>